IDEA-332023 cleanup
GitOrigin-RevId: 6e336b1cff30b8bf5908c75ae912e2c28339e08d